# PDF-Data-Extraction-and-Rapid-Prototyping

./: .gitignore  README.md  manage.py  pyproject.toml
csv_display_webapp/: asgi.py  settings.py  urls.py  wsgi.py
docs/: task1.md  task2.md
pages/: forms.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_image_table_data.py  0003_alter_image_table_data.py  0004_alter_image_file.py
pages/scripts/: file2csv.py  preprocessor.py
scripts/: file2csv.py
static/: main.js  result.js
templates/: base.html  home.html  index.html  result.html
